Tuned styles of the slide snapshot placeholder to avoid flickering on moving slides. Fixed some formatting issues in code.

--- a/app/styles/slide_editor/slideWell.css
+++ b/app/styles/slide_editor/slideWell.css
@@ -9,7 +9,7 @@
 	background-image: url('img/linen-gray.png');
 }
 
-.slideWell .slideSnapshot {
+.slideWell .slideSnapshot, .slideWell .placeholder {
 	width: 120px;
 	height: 90px;
 	margin: 0 auto;
